# kfit_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  erd.html  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_calculations.py  0003_meals_and_plans.py  0004_seed_meals.py  0005_add_users_table.py  0006_mark_snacks.py  0007_llm_requests.py  0008_submission_insights.py  0009_meal_nutrition_detail.py  0010_meal_components.py  0011_meal_plan_free_calories.py  0012_free_calorie_meals.py  0013_free_calculations.py  0014_knowledge_base.py  0015_chat.py  0016_knowledge_source_url.py  0017_notifications.py  001_add_users_table.py
app/: main.py
app/core/: config.py  database.py  deps.py  security.py  storage.py
app/models/: __init__.py  base.py  calculation.py  chat.py  client.py  free_calculation.py  knowledge.py  llm_request.py  meal.py  meal_plan.py  notification.py  submission.py  submission_insight.py  user.py
app/routers/: admin.py  auth.py  calculations.py  chat.py  clients.py  consultants.py  free_calculations.py  knowledge.py  meal_plans.py  notifications.py  onboarding_tokens.py  submissions.py  uploads.py
app/schemas/: user.py
app/services/: calculator_extractor.py  llm_audit.py  nutrition_calculator.py  submissions.py
app/services/ai_toolkit/: __init__.py  tools.py
app/services/chat_assistant/: __init__.py  client_context.py  pipeline.py  prompt.py  repository.py
app/services/knowledge_base/: __init__.py  chunking.py  (+6 more)
scripts/: parse_meals.py  seed_admin.py
(+25 files in other folders)
