[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kfit-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.40",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "boto3>=1.34.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "openai>=1.50.0",
    "pgvector>=0.3.0",
    "tiktoken>=0.7.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
    "trafilatura>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
target-version = ["py313"]
line-length = 88

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
